Implement last endpoint
