# app/api-spec.yaml
@@ -86,6 +86,28 @@ paths:
                   $ref: '#/components/schemas/Network'
         '500':
           description: Failure
+  /network/cost:
+    post:
+      operationId: app.api.get_total_cost_for_network
+      summary: Calculate cost to build a new network
+      tags:
+        - Network
+      responses:
+        '201':
+          description: Created
+        '400':
+          description: Bad request
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                Cost File:
+                  type: string
+                  format: binary
+                Network id:
+                  type: string
       
     
     
